--- a/.github/workflows/check-new-papers.yml
+++ b/.github/workflows/check-new-papers.yml
@@ -15,58 +15,21 @@ jobs:
   run-scripts:
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout repo
-        uses: actions/checkout@v4
-
-      - name: Setup Python
-        uses: actions/setup-python@v5
-        with:
-          python-version: "3.11"
-
       - name: Install deps
         run: |
           python -m pip install --upgrade pip
-          pip install feedparser requests
+          pip install feedparser requests pyyaml
 
-      - name: Run Bayesian/QGP alert
+      - name: Run HEP/QGP topics via runner
         env:
           TIME_FRAME: ${{ github.event.inputs.time_frame || '1' }}
-          DISCORD_WEBHOOK_URL_BAYESIAN_QGP: ${{ secrets.HEP_QGP_BAYESIAN_INFERENCE_HOOK }}
-        run: python arxiv-discord-webhookhep-qgp-bayesian-inference.py
+          MODE: ${{ github.event.inputs.mode || 'auto' }}
 
-      - name: Run hep-ph alert
-        env:
-          TIME_FRAME: ${{ github.event.inputs.time_frame || '1' }}
           DISCORD_WEBHOOK_URL_HEPPH: ${{ secrets.HEP_PH_HOOK }}
-        run: python arxiv-discord-webhook-hep-ph.py
-
-      - name: Run QGP + ML alert
-        env:
-          TIME_FRAME: ${{ github.event.inputs.time_frame || '1' }}
+          DISCORD_WEBHOOK_URL_QGP_BARYOGENESIS: ${{ secrets.HEP_QGP_BARYOGENESIS_HOOK }}
+          DISCORD_WEBHOOK_URL_QGP_LFI: ${{ secrets.HEP_QGP_LFI_HOOK }}
           DISCORD_WEBHOOK_URL_QGP_ML: ${{ secrets.HEP_QGP_ML_HOOK }}
-        run: python arxiv-discord-webhook-hep-qgp-ml.py
-      
-      - name: Run QGP + DKL alert
-        env:
-          TIME_FRAME: ${{ github.event.inputs.time_frame || '1' }}
-          DISCORD_WEBHOOK_URL_QGP_DKL: ${{ secrets.HEP_QGP_DEEP_KERNEL_LEARNING }}
-        run: python arxiv-discord-webhookhep-qgp-deep-kernel-learning.py
-
-      - name: Run QGP + NN alert
-        env:
-          TIME_FRAME: ${{ github.event.inputs.time_frame || '1' }}
           DISCORD_WEBHOOK_URL_QGP_NN: ${{ secrets.HEP_QGP_NEURAL_HOOK }}
-        run: python arxiv-discord-webhook-hep-qgp-neural.py
-
-      - name: Run QGP + LFI
-        env:
-          LOOKBACK_DAYS: ${{ github.event.inputs.lookback_days || '1' }}
-          DISCORD_WEBHOOK_URL_QGP_LFI: ${{ secrets.HEP_QGP_LIKELIHOOD_FREE }}
-        run: python arxiv-discord-webhook-hep-qgp-lfi.py
-
-      - name: Run QGP + Baryogenesis
-        env:
-          LOOKBACK_DAYS: ${{ github.event.inputs.lookback_days || '1' }}
-          DISCORD_WEBHOOK_URL_QGP_BARYOGENESIS: ${{ secrets.HEP_QGP_BARYOGENESIS }}
-        run: python arxiv-discord-webhook-hep-qgp-baryogenesis.py
-
+          DISCORD_WEBHOOK_URL_BAYESIAN_QGP: ${{ secrets.HEP_QGP_BAYESIAN_INFERENCE_HOOK }}
+          DISCORD_WEBHOOK_URL_QGP_DKL: ${{ secrets.HEP_QGP_DEEP_KERNEL_LEARNING }}
+        run: python runner.py topics/hep.yml
